<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:layout_gravity="center"
            android:text="@string/username" />

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="11-digit phone number"
            android:inputType="number"
            android:maxLength="11" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/password" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:layout_toLeftOf="@+id/ibPasswordToggle_login"
                android:hint="6-digit password"
                android:inputType="textPassword" />

            <ImageButton
                android:id="@+id/ibPasswordToggle_login"
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:background="?attr/selectableItemBackground"
                android:scaleType="fitCenter"
                android:src="@drawable/eye_off" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rememberForgotBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkRemember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/remember_me" />

            <TextView
                android:id="@+id/loginForgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/forgot_password" />
        </RelativeLayout>

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login" />
    </LinearLayout>

</FrameLayout>